<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@mipmap/backgroundd"
    tools:context="instagallery.kbibars.com.instagallery.MainActivity">

<FrameLayout
    android:id="@+id/fullImageFramelayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
</FrameLayout>
<RelativeLayout
    android:id="@+id/options_layout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <Button
        android:text="@string/switch_layout"
        android:gravity="center"
        android:id="@+id/switch_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:text="@string/reload"
        android:id="@+id/reload"
        android:layout_toRightOf="@+id/switch_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:id="@+id/linear"
        android:orientation="horizontal"
        android:layout_below="@+id/switch_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Spinner
            android:layout_weight="1"
            android:id="@+id/sort_criteria"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </Spinner>
        <Spinner
            android:layout_weight="1"
            android:id="@+id/sort_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </Spinner>
        <Button
            android:text="@string/apply_sort"
            android:layout_weight="1"
            android:id="@+id/apply_sort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>


    <LinearLayout
        android:layout_below="@id/linear"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:inputType="date"
            android:hint="@string/from_date"
            android:id="@+id/from_date"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:inputType="date"
            android:hint="@string/to_date"
            android:id="@+id/to_date"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/apply_filter"
            android:text="@string/apply_filter"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />
    </LinearLayout>

</RelativeLayout>


    <android.support.v7.widget.RecyclerView
        android:layout_below="@+id/options_layout"
        android:id="@+id/recyler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</RelativeLayout>
